src/main/resources/website/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAME-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: NAME-nginx
  template:
    metadata:
      labels:
        app: NAME-nginx
    spec:
      containers:
      - name: NAME-nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx 
          readOnly: true
          name: nginx-config-volume
        - mountPath: /var/log/nginx
          name: log                    
        - mountPath: /var/www/html/website
          name: website-content-volume
          readOnly: true
        - mountPath: /etc/certs
          name: website-cert
          readOnly: true
      volumes:
        - name: nginx-config-volume
          configMap:
            name: NAME-configmap
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: website.conf
                path: conf.d/website.conf
              - key: mime.types
                path: mime.types 
        - name: log
          emptyDir: {}
        - name: website-content-volume
          persistentVolumeClaim:
            claimName: NAME-content-volume
        - name: website-cert
          secret: 
            secretName: NAME-cert
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
