src/main/resources/website/website-build-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAME-build-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      app: NAME-builder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: NAME-builder
        app.kubernetes.io/name: NAME-builder
        app.kubernetes.io/part-of: website
    spec:
      containers:
      - image: domaindrivenarchitecture/c4k-website-build
        name: NAME-build-app
        imagePullPolicy: IfNotPresent
        command: ["/entrypoint.sh"]        
        volumeMounts:
        - name: content-volume
          mountPath: /var/www/html/website
      volumes:
      - name: content-volume
        persistentVolumeClaim:
          claimName: NAME-content-volume
