src/main/resources/website/nginx-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: NAME-service
  labels:
    app: NAME-nginx
  namespace: default
spec:    
  selector:
    app: NAME-nginx
  ports:
    - name: nginx-http
      port: 80             
    - name: nginx-https # TODO: Review jem 2022/10/26: we terminate ssl in ingress, do not pass thru
      port: 443
