src/main/resources/website/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c4k-common-http-ingress
  namespace: default
  annotations:    
    traefik.ingress.kubernetes.io/router.entrypoints: web    
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd    
spec:
  rules:
    - host: FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: SERVICENAME
                port:
                  number: 80
