src/main/resources/website/single-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: NAME-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd    
spec:
  tls:
    - hosts:
        - FQDN
      secretName: NAME-cert
  rules:
    - host: FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: NAME-service
                port:
                  number: 80
